<resources>
    <string name="app_name">VP Fitness</string>
    <string name="title_activity_onboarding_fragment">OnboardingFragmentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings for the onboarding story -->
    <string name="welcome_info_header">Hi! Welcome to Trainer</string>
    <string name="welcome_info_description">To give you the best possible experience, please tell us a little bit about yourself!</string>

    <string name="burn_fat_description">Fat-burning workouts to help lose weight and tone muscle</string>
    <string name="build_muscle_description">Strength training to increase muscle mass</string>
    <string name="improve_endurance_description">Cardio workouts to help you stay active for longer</string>

    <string name="personal_title">About You</string>
    <string name="year_slider">Year Born</string>
    <string name="weight_slider">Weight</string>
    <string name="height_slider">Height</string>
    <string name="weight_units">lbs</string>
    <string name="height_first_unit">ft</string>
    <string name="height_second_unit">in</string>

    <string name="beginner_description">Little to no prior workout experience. (You currently exercise 0 to 5 times a month)</string>
    <string name="intermediate_description">Moderate prior workout experience. (You currently work out 6 to 12 times a month)</string>
    <string name="expert_description">Significant workout experience. (You currently exercise 13+ times a month</string>

    <string name="equipment_info_header">We would like to know what workout equipment you have access to</string>
    <string name="equipment_info_description">Knowing what equipment you have access to will allow us to create workouts suited to what you have available. No gym membership required! There are many great workouts you can do right at home</string>

    <string name="username_info_header">You\'re almost there!</string>
    <string name="username_info_description">Now all you need is a username for your character! This is the name that your friends in Fitness will identify you by, so choose wisely!</string>

    <string name="onboard_error_title">Account Creation Error</string>
    <string name="onboard_error_content">An unknown error occurred during account creation; please try again later.</string>
    <string name="onboard_error_pos">OK</string>
    <string name="onboard_error_auth">Your account has been created, but there was a problem logging in; please try logging in later.</string>
    <string name="onboard_error_name">Please enter a name which is more than two letters long.</string>
    <string name="onboard_error_email">Please enter a valid email address.</string>
    <string name="onboard_error_password">Your password must be more than 6 characters.</string>
    <string name="onboard_error_match">Your passwords do not match.</string>
    <string name="onboard_error_goal">You must choose a goal! This can be changed later within your settings.</string>
    <string name="onboard_error_diff">You must choose a difficulty! This can be changed later within your settings.</string>
    <string name="onboard_error_username">Please enter a username with 3 or more characters.</string>
    <string name="onboard_error_during_title">Invalid Entry</string>

    <string name="login_header">Login to Trainer</string>
    <string name="login_button">Login</string>
    <string name="login_no_account">I don\'t have an account</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_error">Username or password is incorrect; please try again.</string>
    <string name="login_error_title">Login Failed</string>

    <string name="onboard_already_exist">I already have an account</string>
    <string name="title_activity_fitness">FitnessActivity</string>


</resources>
