<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/vp_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/welcome_info_header"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/welcome_info_description"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/onboard_login_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/onboarding_option"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onboard_already_exist"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>