<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="Set Difficulty"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingTop="16dp"/>

    <LinearLayout
        android:id="@+id/goals_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/beginner_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@drawable/onboarding_option"
            android:paddingTop="12dp"
            android:paddingLeft="18dp"
            android:paddingRight="24dp"
            android:layout_marginBottom="32dp"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Beginner"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beginner_description"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/intermediate_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@drawable/onboarding_option"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="18dp"
            android:paddingRight="24dp"
            android:layout_marginBottom="32dp"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Intermediate"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intermediate_description"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/expert_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@drawable/onboarding_option"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="18dp"
            android:paddingRight="24dp"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expert"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expert_description"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>